--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Pessoal  - Déric</title>
 </head>
 <body>
 
     <header>
-        <h1>Bem-vindo ao meu site pessoal!</h1>
+        <h1 id="title">Bem-vindo ao meu site pessoal!</h1>
         <nav>
-            <ul>
+            <ul class="menu">
                 <li><a href="#sobre">Sobre Mim</a></li>
                 <li><a href="#projetos">Projetos</a></li>
                 <li><a href="#contato">Contato</a></li>
@@ -60,6 +61,24 @@
                 de telefone <a href="tel:+5544991698052">+55 (44) 9 9169-8052📱</a>.</p>    
             <p>Estou sempre aberto a novas oportunidades e colaborações!</p>
 
+        </section>
+
+
+        <section id="entre">
+            <h2>Entre Contato</h2>
+            <p>Se você deseja entrar em contato comigo, sinta-se à vontade para me enviar uma mensagem através do formulário abaixo:</p>
+            <form action="https://formspree.io/f/mjvowzqk" method="POST">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" required>
+
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="mensagem">Mensagem:</label>
+                <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
+
+                <button type="submit">Enviar</button>
+           
         </section>
     </main>
     <footer>
