--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Pessoal  - Déric</title>
 </head>
@@ -23,7 +23,7 @@
     <main>
   
         <section id="sobre">
-            <img src="foto.jpg" alt="Foto de Déric" style="width:200px;height:auto;">
+            <img src="foto.jpg" alt="Foto de Déric">
             <h2>Sobre Mim</h2>
             <p>Olá! Meu nome é Déric e este é o meu site pessoal. Aqui você encontrará 
                 informações sobre mim, meus projetos e como entrar em contato.</p>
@@ -41,7 +41,7 @@
 
         </section>
 
-        <selection id="hobbies">
+        <section id="hobbies">
             <h2>Hobbies</h2>
             <p>Além de programar, gosto de:</p>
             <ul>
@@ -51,7 +51,7 @@
                 <li>Viajar e conhecer novos lugares. ⛳</li>
                 <li>Brincar com os meus Dogs. 🐶</li>
             </ul>
-        </selection>
+        </section>
 
         <section id="contato">
             <h2>Contato</h2>
@@ -78,6 +78,7 @@
                 <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
 
                 <button type="submit">Enviar</button>
+            </form>
            
         </section>
     </main>
